# py_deprecate

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
lib/: deprecate.py  exceptions.py
py_deprecate/: __init__.py  decorate.py  exceptions.py  settings.py
py_deprecate/behaviors/: base.py  disabled.py  log.py  raise_exception.py
py_deprecate/lib/: decorate.py  exceptions.py  settings.py
py_deprecate/lib/behaviors/: base.py  disabled.py
tests/: fixtures.py  test_decorator.py
