[metadata]
# replace with your username:
name = py_deprecate
version = 0.0.1
author = multi-vac
author_email = multivac_7@protonmail.com
description = Python Deprecation Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/multi-vac/py_deprecate
project_urls =
    Bug Tracker = https://github.com/multi-vac/py_deprecate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = py_deprecate
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src